Update my icon.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">滑天下之大稽</string>
+    <string name="app_name">口袋</string>
     <string name="spf_user">user</string>
     <string name="index">index</string>
     <string name="open">open</string>
